# 2D-3D-RegistrationTool

./: .gitignore  .gitignore.swp  :w  BSplineDeformableTransformOpt.h  BSplineDeformableTransformOpt.txx  CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  CMakeLists.txt.user.74590ce.20  CMakeLists.txt.user.b1a5c2a  ImageCompare.cxx  LICENSE  README.md  itkFRPROptimizerTest.cxx  itkFRPROptimizer_opt.cxx  itkFRPROptimizer_opt.h  itkGradientDifferenceMultiImageToImageMetric.h  itkGradientDifferenceSingleImageToImageMetric.h  itkGradientDifferenceSingleImageToImageMetric.txx  itkMeanSquaresMultiImageToImageMetric.h  itkMultiImageRegistrationMacro.h  itkMultiImageToImageMetric.h  itkMultiImageToImageMetric.txx  itkMultiImageToImageRegistrationMethod.h  itkMultiImageToImageRegistrationMethod.txx  itkMultiResolutionMultiImageToImageRegistrationMethod.h  itkMultiResolutionMultiImageToImageRegistrationMethod.txx  itkNormalizedCorrelationTwoImageToOneImageMetric.h  itkNormalizedCorrelationTwoImageToOneImageMetric.txx  itkNormalizedGradientCorrelationImageToImageMetric.h  itkNormalizedGradientCorrelationImageToImageMetric.txx  itkNormalizedGradientCorrelationMultiImageToImageMetric.h  itkPatchedRayCastInterpolateImageFunction.h  itkPatchedRayCastInterpolateImageFunction.txx  itkPatternIntensityImageToImageMetric.h  itkPatternIntensityImageToImageMetric.txx  itkPatternIntensityMultiImageToImageMetric.h  itkPatternIntensityMultiImageToImageMetric.txx  manejo-imagenes.ipynb  utils.cpp  utils.h
CostFunction/: CMakeLists.txt  MeanSquares2D.gnup  MeanSquaresImageMetric1.cxx  MeanSquaresMetricFigures.gnup  MeanSquaresMetricFiguresShow.gnup  MeanSquaresMetricOutput.txt
DeformacionesAleatorias/: CreateImageSetAffine.cxx  CreateImageSetBspline.cxx  CreateImageSetSimilarity.cxx
Examples/: .MultiImageRegistration.cxx.swo  .MultiImageRegistration.cxx.swp  .swp  :  LogRegisterIteration_2_0.01_2_4_6_4_2_1_.txt  LogRegisterIteration_2_0.08_3_4_6_4_2_1_.txt  MultiImageRegistration.cxx  MultiImageSearch.cxx  doRegistration  doRegistration.cpp  multiTesting.cpp  readCmd  readCmd.cpp  scriptBuilder.cpp  scriptBuilder.h  subprocess.hpp  visualRegister.cpp
GenDRRs/: .genVirtualImage.cxx.swo  .genVirtualImage.cxx.swp  CMakeLists.txt  appGenVirtGen.cpp  genVirtGen.cpp  genVirtGen.h  genVirtualImage.cxx  genVirtualImage.cxx.autosave  gestorMatrixRot.cpp  gestorMatrixRot.cxx  gestorMatrixRot.h  logVolRef.txt
GenDRRs/buildGenVir/: genVirtualImage
bestData/: pelvisDRRG0LspCenter.mha  pelvisDRRG90PsrCenter.mha  pelvisDRR_G0.mha  pelvisDRR_G0.tif  pelvisDRR_G0_lsp.mha  pelvisDRR_G90.mha  pelvisDRR_G90.tif  pelvisDRR_G90_asl.mha  pelvisDRR_G90_psr.mha  segmIntNewContrast.mha
bestData/outDir/: outMatrix.txt  outTransform.txt  projection00.mha  subtraction00.mha
cmdPlots/: Rot_plotValueTransGen.gnup  barhdist.gnup  boxplotTranfParams.gnup  plotValueTransGen.gnup  spyder4.gnup  spyder5.gnup  transposeTable.awk
inputData/: onlyHemipelvis.mha  pelvisSegmIntensityDef.mha  pelvisSegmIntensityLPI.mha  pelvisVol.mha
inputData/Images/: 0.mhd
inputData/TransformFiles/: 0.txt
mybuild/: ReadCmd  doRegistration  multiTesting
mydebug/: ReadCmd  doRegistration  multiTesting
outputData/resultsReg/: fixedImage0.mha  fixedImage1.mha  initial_projection_0_999_0FF0.mha  initial_projection_999_0_0FF1.mha  initial_subtraction_0_999_0SS0.mha  initial_subtraction_999_0_0SS1.mha
outputData/virtualImages/: pelvisHealthy_ap.mha  pelvisHealthy_ml.mha
outputDataIni/: ._newRMSE_Registro.txt  HausdorffDistances.txt  ImagesDefsLogCreateDefImageWithSimilarity_0.txt  ImagesDefsLogCreateDefImageWithSimilarity_1.txt  ImagesDefsLogCreateDefImageWithSimilarity_10.txt  ImagesDefsLogCreateDefImageWithSimilarity_11.txt  ImagesDefsLogCreateDefImageWithSimilarity_12.txt  ImagesDefsLogCreateDefImageWithSimilarity_13.txt  ImagesDefsLogCreateDefImageWithSimilarity_14.txt  ImagesDefsLogCreateDefImageWithSimilarity_15.txt  ImagesDefsLogCreateDefImageWithSimilarity_16.txt  ImagesDefsLogCreateDefImageWithSimilarity_17.txt  ImagesDefsLogCreateDefImageWithSimilarity_18.txt  ImagesDefsLogCreateDefImageWithSimilarity_19.txt  ImagesDefsLogCreateDefImageWithSimilarity_2.txt  ImagesDefsLogCreateDefImageWithSimilarity_3.txt  ImagesDefsLogCreateDefImageWithSimilarity_4.txt  ImagesDefsLogCreateDefImageWithSimilarity_5.txt  ImagesDefsLogCreateDefImageWithSimilarity_6.txt  ImagesDefsLogCreateDefImageWithSimilarity_7.txt  ImagesDefsLogCreateDefImageWithSimilarity_8.txt  ImagesDefsLogCreateDefImageWithSimilarity_9.txt  ImagesDefslogRelocatedVolume.txt0.txt  RMSE_Registro.txt  box0.txt  box1.txt  box2.txt  datosRegistro.txt  hdgeneral.txt  newRMSE_Registro.txt
outputDataIni/multires/: current_projection00.mha  current_projection01.mha  current_projection10.mha  current_projection11.mha  current_projection20.mha  current_projection21.mha  current_projection30.mha  current_projection31.mha  current_subtraction00.mha  current_subtraction01.mha  current_subtraction10.mha  current_subtraction11.mha  current_subtraction20.mha  current_subtraction21.mha  current_subtraction30.mha  current_subtraction31.mha
outputDataIni/resultsReg/: fixedImage0.mha  fixedImage1.mha  initial_projection_0_-1000_0FF0.mha  initial_projection_1000_0_0FF1.mha  initial_subtraction_0_-1000_0SS0.mha  initial_subtraction_1000_0_0SS1.mha
outputDataIni/resultsReg_0/: ._LogMultiImageRegistration_0  ._fixedImage0.mha  LogMultiImageRegistration_0  fixedImage0.mha  fixedImage1.mha  inMatrix_0.02_4.txt  initial_subtraction_-1000_0_0SS1.mha  initial_subtraction_0_-1000_0SS0.mha  initial_subtraction_1000_0_0SS1.mha  level0.txt  level1.txt  level2.txt  level3.txt  outMatrix_0.01_4.txt  outMatrix_0.02_4.txt  outTransform.txt  plotValueTrans0.gnup  plotValueTransf00.gnup  plotValueTransf01.gnup  plotValueTransf02.gnup  plot_temp0.gnup  plot_temp1.gnup  plot_temp2.gnup  plot_temp3.gnup  projection_-1000_0_0_0.01_4FF1.mha  projection_0_-1000_0_0.01_4FF0.mha  projection_0_-1000_0_0.02_4FF0.mha  projection_1000_0_0_0.02_4FF1.mha  subtraction_-1000_0_0_0.01_4SS1.mha  subtraction_0_-1000_0_0.01_4SS0.mha  (+15 more)
(+633 files in other folders)
